--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,17 @@
 *.tr
 *.tar.gz
 Makefile
+autoconf.h
+common/ptypes2tcl
+config.log
+config.status
+gen/
+indep-utils/cmu-scen-gen/setdest/calcdest
+indep-utils/cmu-scen-gen/setdest/setdest
+indep-utils/webtrace-conv/dec/dec-tr-stat
+indep-utils/webtrace-conv/epa/epa-tr-stat
+indep-utils/webtrace-conv/nlanr/nlanr-tr-stat
+indep-utils/webtrace-conv/ucb/ucb-tr-stat
+ns
+nstk
+tcl/lib/ns-autoconf.tcl
